--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "parcel-bundler": "^1.9.7"
   },
   "devDependencies": {
-    "eslint": "^5.6.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "husky": "^1.0.0-rc.14",
-    "parcel-bundler": "^1.9.7",
-    "prettier": "^1.14.2"
+    "eslint-plugin-import": "^2.16.0",
+    "husky": "^1.3.1",
+    "parcel-bundler": "^1.11.0",
+    "prettier": "^1.16.3"
   },
   "dependencies": {
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "posthtml": "^0.11.3",
     "svg-sprite": "^1.5.0",
