--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "parcel-bundler": "^1.9.7"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "husky": "^1.3.1",
-    "parcel-bundler": "^1.11.0",
-    "prettier": "^1.16.3"
+    "eslint-plugin-import": "^2.17.2",
+    "husky": "^2.2.0",
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.17.0"
   },
   "dependencies": {
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
-    "posthtml": "^0.11.3",
+    "posthtml": "^0.11.4",
     "svg-sprite": "^1.5.0",
-    "xxhash": "^0.2.4"
+    "xxhashjs": "^0.2.2"
   },
   "husky": {
     "hooks": {
