--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "fs-extra": "^7.0.1",
+    "glob": "^7.1.4",
     "lodash": "^4.17.11",
     "posthtml": "^0.11.4",
     "svg-sprite": "^1.5.0",
