add the possibility to set options from `svgSprite.config.js` file

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "arrow-parens": ["error", "as-needed"],
     "no-use-before-define": "off",
     "semi": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "operator-linebreak": "off"
   }
 }
