--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-use-before-define": "off",
     "semi": "off",
     "max-len": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "object-curly-newline": "off"
   }
 }
