adapt plugin for Parcel v2

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-# OS X
-.DS_Store*
-Icon?
-._*
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# Linux
-.directory
-*~
-
-# npm
 node_modules
-*.log
-*.gz
+.DS_Store
+*.js
+*.local
