--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": false,
+  "quoteProps": "consistent",
   "trailingComma": "all",
   "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
